Changelog
=========


1.5.5 (unreleased)
------------------

- Nothing changed yet.

- Use UID for searching References. IDs can be used multiple times.
  [tschanzt]

1.5.4 (2013-09-02)
------------------

- Wrap div around memberships in contact view.
  [Julian Infanger]


1.5.3 (2013-05-24)
------------------

- Nothing changed yet.


1.5.2 (2013-05-07)
------------------

- Fixed contact_listing_view template.
  [misch]


1.5.1 (2013-04-23)
------------------

- Added missing translation.
  [Julian Infanger]


1.5 (2013-04-02)
----------------

- Fix address in listing (lastname, firstname).
  [mathias.leimgruber]

- Lawgiver support: map permissions.
  [jone]

- Fixed concatenation of address fields for GeocodableLocation string.
  [lgraf]

- Migrate simplelayout actions.
  [mathias.leimgruber]

- Fix several template issues.
  [mathias.leimgruber]

- Use content-core macro on member view.
  [mathias.leimgruber]

- Use content-core macro on contact view.
  [mathias.leimgruber]

1.4 (2013-01-25)
----------------

- Fix TAL expression in folder contacts listing template.
  [jone]

- Added upgrade step to migrate Contact objects from P.Maps to c.geo.
  [lgraf]

- Moved map viewlet to plone.belowcontentbody.
  [lgraf]

- Enabled automatic geocoding for Contact objects.
  [lgraf]

- Added 'abovecontentbody' viewlet to contact template (needed for cg.geo map).
  [lgraf]

- Added collective.geo.* integration
  [lgraf]

- Removed Products.Maps
  [lgraf]


1.3.6 (2012-11-16)
------------------

- Fix firstname lastname order.
  [mathias.leimgruber]

1.3.5 (2012-11-16)
------------------

- Rerelease 1.3.4 as 1.3.5, something went wrong.
  [mathias.leimgruber]


1.3.4 (2012-10-10)
------------------

- Added conditions in contacts view. Only display labels of fields which are not empty.
  [Julian Infanger]

- Temporary remove maps from contact view.
  [mathias.leimgruber]

- Added missing dependency.
  [phgross]

- Do not lookup geocordinates if no api_key is defined.